# egynaecologist-agent

./: .env.example  .gitignore  Dockerfile  agent.py  db.py  email_service.py  prompts.py  pyproject.toml  railway.toml  services.py  setup_outbound.py  setup_sip.py  setup_twilio.py  teardown_outbound.py  tools.py  twilio_watchdog.py
dashboard/: .env.example  .gitignore  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/admin/: layout.tsx  page.tsx
dashboard/app/admin/settings/: page.tsx
dashboard/app/api/bookings/: route.ts
dashboard/app/api/bookings/[id]/: route.ts
dashboard/app/api/bookings/[id]/cancel/: route.ts
dashboard/app/api/bookings/[id]/confirm/: route.ts
dashboard/app/api/bookings/bulk/: route.ts
dashboard/app/api/bookings/export/: route.ts
dashboard/app/api/escalations/: route.ts
dashboard/app/api/escalations/[id]/: route.ts
dashboard/app/api/login/: route.ts
dashboard/app/api/settings/: route.ts
dashboard/app/login/: page.tsx
dashboard/components/: decorative.tsx  escalations-panel.tsx  filter-bar.tsx  ledger.tsx  status-tag.tsx  wordmark.tsx
dashboard/lib/: auth.ts  format.ts  supabase.ts
supabase/: during_hours_migration.sql  escalations_migration.sql  leads_migration.sql  notes_migration.sql  schema.sql  transfer_flags_migration.sql
